--- a/ci-operator/step-registry/operator/install/operator-install-ref.yaml
+++ b/ci-operator/step-registry/operator/install/operator-install-ref.yaml
@@ -7,11 +7,21 @@ ref:
       cpu: 100m
       memory: 200Mi
   env:
-    - name: OPERATOR_NAME
-      documentation: Operator name
-    - name: OPERATOR_NAMESPACE
+    - name: OPERATOR1_CONFIG
       default: ""
-      documentation: Operator namespace
+      documentation: Operator1 name and comma-separated string with operator parameters, such as 'rhods-operator|namespace=redhat-ods-operator'
+    - name: OPERATOR2_CONFIG
+      default: ""
+      documentation: Operator2 name and comma-separated string with operator parameters, such as 'rhods-operator|namespace=redhat-ods-operator'
+    - name: OPERATOR3_CONFIG
+      default: ""
+      documentation: Operator3 name and comma-separated string with operator parameters, such as 'rhods-operator|namespace=redhat-ods-operator'
+    - name: OPERATOR4_CONFIG
+      default: ""
+      documentation: Operator4 name and comma-separated string with operator parameters, such as 'rhods-operator|namespace=redhat-ods-operator'
+    - name: PARALLEL
+      default: "false"
+      documentation: To run addons install in parallel, set to "true"
     - name: API_HOST
       default: stage
       documentation: Tested environment
