--- a/ci-operator/step-registry/operator/uninstall/operator-uninstall-ref.yaml
+++ b/ci-operator/step-registry/operator/uninstall/operator-uninstall-ref.yaml
@@ -7,8 +7,21 @@ ref:
       cpu: 100m
       memory: 200Mi
   env:
-    - name: OPERATOR_NAME
-      documentation: Operator name
+    - name: OPERATOR1_CONFIG
+      default: ""
+      documentation: Operator1 name and comma-separated string with operator parameters, such as 'rhods-operator|namespace=redhat-ods-operator'
+    - name: OPERATOR2_CONFIG
+      default: ""
+      documentation: Operator2 name and comma-separated string with operator parameters, such as 'rhods-operator|namespace=redhat-ods-operator'
+    - name: OPERATOR3_CONFIG
+      default: ""
+      documentation: Operator3 name and comma-separated string with operator parameters, such as 'rhods-operator|namespace=redhat-ods-operator'
+    - name: OPERATOR4_CONFIG
+      default: ""
+      documentation: Operator4 name and comma-separated string with operator parameters, such as 'rhods-operator|namespace=redhat-ods-operator'
+    - name: PARALLEL
+      default: "false"
+      documentation: To run addons install in parallel, set to "true"
     - name: TIMEOUT
       default: "3600"
       documentation: Timeout in seconds to wait for operator to be uninstalled
